--- a/h2.html
+++ b/h2.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p style background-color="green" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos atque ipsa possimus architecto praesentium nobis, officia doloribus dolor ipsum perferendis vel laboriosam fugiat, alias quaerat. Harum sapiente assumenda, nobis aut recusandae obcaecati ipsa laboriosam?</p>
+    <p style background-color="blue" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos atque ipsa possimus architecto praesentium nobis, officia doloribus dolor ipsum perferendis vel laboriosam fugiat, alias quaerat. Harum sapiente assumenda, nobis aut recusandae obcaecati ipsa laboriosam?</p>
 </body>
 </html>
